--- a/crates/murk-python/pyproject.toml
+++ b/crates/murk-python/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "maturin"
 name = "murk"
 dynamic = ["version"]
 description = "Python bindings for the Murk simulation framework"
+readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.12"
 license = {text = "MIT"}
 authors = [{name = "John Morrissey"}]
